third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_value2.exp
error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_value2.move:3:9
  │
3 │         5();
  │         ^ Calls through computed functions not supported by this compiler

error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_value2.move:4:9
  │
4 │         5(0, 1);
  │         ^ Calls through computed functions not supported by this compiler

