third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_value2.move
module 0x123::M {
    fun foo() {
        5();
        5(0, 1);
    }
}
